<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image_for_home"
    tools:context=".SelfMadeActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/choose_burger_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/background_design"
        android:fontFamily="@font/sans"
        android:gravity="center"
        android:text="@string/choose_burger_type"
        android:textColor="@color/black" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    >

        <TextView
            android:id="@+id/chicken_cheese_vegs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sans"
            android:gravity="center"
            android:text="@string/beef_cheese_tomato"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/beef_cheese_tomato"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sans"
            android:gravity="center"
            android:text="@string/chicken_cheese_vegs"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tofu_egg_cheese"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/sans"
            android:text="@string/tofu_egg_cheese"
            android:textColor="@color/black" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
       android:layout_margin="5dp"
        >
        <RadioGroup
            android:id="@+id/burger_size_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/family_size_burger"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/burger1"
                android:onClick="onClickFamilySizeChosen" />

            <RadioButton
                android:id="@+id/regular_size_burger"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/burger2"
                android:onClick="onClickRegularSizeChosen" />


            <RadioButton
                android:id="@+id/small_size_burger"
                android:layout_width="109dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20sp"
                android:background="@drawable/burger3"
                android:onClick="onClickSmallSizeChosen" />
        </RadioGroup>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
    </LinearLayout>


    <LinearLayout
    android:id="@+id/spinnerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/total_amount"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_button"
            android:fontFamily="@font/sans"
            android:textColor="@color/black"
            android:background="@drawable/background_design"
            android:onClick="onClickFinishOrder"/>
        
    </LinearLayout>

  </LinearLayout>

</ScrollView>

