<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_image_for_home"
    android:orientation="vertical">




    <TextView
        android:id="@+id/greeting_with_time_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_txt"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/sans"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_plain_txt"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_design"
            android:ems="10"
            android:textSize="25sp"
            android:fontFamily="@font/sans"
            android:hint="@string/hint"
            android:inputType="textPersonName" />

        <ImageButton

            android:id="@+id/send_name_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/image_button"
            android:onClick="onClickNameEntered"
            android:text="@string/send_name_btn"
            android:layout_marginTop="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/iw"
            android:layout_marginRight="20dp"
            android:onClick="onClickChangeToHebrew"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@drawable/en"
            android:layout_marginLeft="20dp"
            android:onClick="onClickChangeToEnglish" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>